# fs4me

./: .gitignore  CHANGES.md  Cargo.toml  DEVELOPER_GUIDE.md  Makefile  README.md  REPORT.md  SPECIFICATION.md  codebook.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: buffer.rs  lib.rs  lock.rs  trash.rs  uuid.rs
client/src/___old/driver/: mod.rs
client/src/___old/ffi/: dir.rs  file.rs  ls.rs  mod.rs  rw.rs
client/src/___old/ffi/interface/: mod.rs  writer.rs
client/src/lock/: base_lock.rs  lock_info.rs  lock_path.rs  mod.rs
client/tests/: integration_cp.rs  integration_tests.rs  integration_tests_info.rs  integration_tests_rm.rs  integration_tests_rw.rs
common/lock/: Cargo.toml  Readme.md
common/lock/src/: base_lock.rs  helpers.rs  lib.rs  lock_info.rs
common/lock/src/base_lock/: mod.rs  paths.rs
common/lock/tests/: init.rs  lock_tests.rs  multi_lock_tests.rs
common/lock/tests/locks/: base_lock_tests.rs  mod.rs  multi_lock_tests.rs
common/macro/: Cargo.toml
common/macro/src/: lib.rs
common/test_infra/: Cargo.toml  Dockerfile  my_ssh_key  my_ssh_key.pub
common/test_infra/src/: lib.rs
common/uuid/: Cargo.toml
common/uuid/src/: lib.rs
driver/local/: Cargo.toml
driver/local/src/: lib.rs
driver/local/tests/: integration_cp.rs  integration_ffi.rs  integration_tests.rs  integration_tests_mv.rs  integration_tests_rename.rs  integration_tests_rw.rs
driver/sftp/: Cargo.toml
driver/sftp/src/: lib.rs
driver/sftp/tests/: init.rs  integration_cp.rs  integration_tests.rs  integration_tests_rename.rs  integration_tests_rw.rs
ffi_tests/: Cargo.toml  build.rs
ffi_tests/src/: dir.rs  lib.rs
interface/: Cargo.toml
interface/src/: errors.rs  lib.rs  open_params.rs
