[workspace]
resolver = "2"

members = ["driver/local", "ffi_tests", "interface"]

default-members = ["driver/local"]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["VMM <vladimirov.m.m@mail.ru>"]
publish = false

[workspace.dependencies]
fs4me-local.path = "./driver/local"
fs4me-interface.path = "./interface"

eyre="0.6.12"
rand="0.10.1"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["json", "env-filter"]}
tracing-test = "0.2.6"

tempfile = "3.27.0"
chrono = "0.4.44"
