[workspace]
resolver = "2"

members = ["driver/local", "client", "interface"]

default-members = ["client","interface"]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["VMM <vladimirov.m.m@mail.ru>"]
publish = false
license = "MIT"

[workspace.dependencies]
fs4me-client.path = "./client"
fs4me-interface.path = "./interface"
fs4me-local.path = "./driver/local"

thiserror = "2.0.18"
tempfile = "3.27.0"
rand="0.10.1"
chrono = "0.4.44"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["json", "env-filter"]}
tracing-test = "0.2.6"

[workspace.lints.clippy]
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
