[package]
name = "fs4me-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fs4me-interface.workspace = true

rand.workspace = true
tracing.workspace = true

[dev-dependencies]
fs4me-local.workspace = true

tracing-test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
