[package]
name = "fs4me-lock"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fs4me-interface.workspace = true
fs4me-uuid.workspace = true

tracing.workspace = true
rand.workspace = true

[dev-dependencies]
fs4me-local.workspace = true

tracing-test.workspace = true
tempfile.workspace = true

[features]
test_env = []

[lints]
workspace = true
