[package]
name = "fs4me-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-test.workspace = true
tempfile.workspace = true

ctor.workspace = true
libloading.workspace = true

[lints]
workspace = true
