[package]
name = "fs4me-test-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-test.workspace = true
rand.workspace = true
bollard.workspace = true
tokio.workspace = true
anyhow.workspace = true
futures-util.workspace = true
tar.workspace = true
bytes.workspace = true

[features]
test_with_docker = []

[lints]
workspace = true
