[package]
name = "fs4me-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lib]

[dependencies]
fs4me-interface.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing.workspace = true
tracing-test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
