[package]
name = "fs4me-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
fs4me-interface.workspace = true
fs4me-client.workspace = true
fs4me-macro.workspace = true

tracing.workspace = true

[dev-dependencies]
tracing-test.workspace = true
tempfile.workspace = true

ctor.workspace = true
libloading.workspace = true

[lints]
workspace = true
