[package]
name = "fs4me-sftp"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fs4me-interface.workspace = true
fs4me-client.workspace = true
fs4me-macro.workspace = true

tracing.workspace = true
ssh2.workspace = true
base64="0.22.1"

[dev-dependencies]
fs4me-test-infra.workspace = true

tracing-test.workspace = true
libloading.workspace = true
tokio.workspace = true

[features]
test_with_docker = []

[lints]
workspace = true
